# AIlarma

./: README.md
conan/client/: conanfile.txt
conan/server/: conanfile.txt
scripts/: conaninstall.sh
src/server/: BaseBuffer.h  CMakeLists.txt  MainWindow.cpp  MainWindow.h  StreamThread.cpp  StreamThread.h  VideoThread.cpp  VideoThread.h  basictypes.h  media_video.cpp  media_video.h
